--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    
+    <div class="flex-container">
+        <div class="title">
+            <h1>sketch Pad</h1>
+        </div>
+    </div>
 </body>
 </html>
