--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
     <div class="flex-container">
-        <div class="title">
-            <h1>sketch Pad</h1>
+        <div class="title"><h1>sketch Pad</h1></div>
+        <div class="content">
+            <div class="board"></div>
+            <div class="buttons">
+                <button>Black</button>
+                <button>white</button>
+                <button>Random</button>
+                <button>reset</button>
+            </div>
         </div>
     </div>
 </body>
