--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <button>reset</button>
             </div>
         </div>
+        <input type="text" placeholder="size of board" value="16">
+        <button>reset size</button>
     </div>
 </body>
 </html>
