--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <input type="text" placeholder="size of board" value="16">
         <button>reset size</button>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
