populate Board function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button>reset</button>
             </div>
         </div>
-        <input type="text" placeholder="size of board" value="16" onchange="">
+        <input type="text" placeholder="size of board" value="16" onchange="changeSize(this.value)" />  
         <button>reset size</button>
     </div>
    
