--- a/index.html
+++ b/index.html
@@ -14,16 +14,30 @@
         <div class="content">
             <div class="board"></div>
             <div class="buttons">
-                <button>Black</button>
-                <button>white</button>
-                <button>Random</button>
-                <button>reset</button>
+                <button class="blackButton" onclick="changeColor('black')">
+                    Black
+                  </button>
+                  <button class="erasorButton" onclick="changeColor('white')">
+                    Erasor
+                  </button>
+                  <button class="grayButton" onclick="changeColor('gray')">Gray</button>
+                  <button class="randomButton" onclick="changeColor('random')">
+                    Random
+                  </button>
+                  <button onclick="resetBoard()">Reset</button>
+                </div>
+                <div>
+                  <input
+                    type="text"
+                    placeholder="Size of Board"
+                    value="16"
+                    onchange="changeSize(this.value)"
+                  />
+                  <button>Set Size</button>
+                </div>
+                <div class="error">Input must be between 2 and 100</div>
+              </div>
             </div>
-        </div>
-        <input type="text" placeholder="size of board" value="16" onchange="changeSize(this.value)" />  
-        <button>reset size</button>
-    </div>
-   
-</body>
-<script src="main.js"></script>
-</html>
+          </body>
+          <script src="main.js"></script>
+        </html>
