--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="flex-container">
-        <div class="title"><h1>sketch Pad</h1></div>
+        <div class="title"><h1>Sketch Pad Odin Project | Andeka KickStart Program</h1></div>
         <div class="mode">Mode: Coloring</div>
         <div class="content">
             <div class="board"></div>
